comandos.txt
protoc --cpp_out=. chat.proto
gcc -Wall -I/usr/include/protobuf-c -c servidor.c
servidor.c: In function ‘main’:
servidor.c:99:36: warning: passing argument 3 of ‘pthread_create’ from incompatible pointer type [-Wincompatible-pointer-types]
   99 |         pthread_create(&tid, NULL, &handle_client, (void*)cli);
      |                                    ^~~~~~~~~~~~~~
      |                                    |
      |                                    void (*)(void *)
In file included from servidor.c:6:
/usr/include/pthread.h:204:36: note: expected ‘void * (*)(void *)’ but argument is of type ‘void (*)(void *)’
  204 |                            void *(*__start_routine) (void *),
      |                            ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
gcc -Wall -I/usr/include/protobuf-c -c chat.pb-c.c
gcc -o servidor servidor.o chat.pb-c.o -lprotobuf-c
gcc -Wall -I/usr/include/protobuf-c -c cliente.c
cliente.c: In function ‘main’:
cliente.c:61:5: error: unknown type name ‘NewUserRequest’; did you mean ‘Chat__NewUserRequest’?
   61 |     NewUserRequest new_user_req = NEW_USER_REQUEST__INIT;
      |     ^~~~~~~~~~~~~~
      |     Chat__NewUserRequest
cliente.c:61:35: error: ‘NEW_USER_REQUEST__INIT’ undeclared (first use in this function); did you mean ‘CHAT__NEW_USER_REQUEST__INIT’?
   61 |     NewUserRequest new_user_req = NEW_USER_REQUEST__INIT;
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
      |                                   CHAT__NEW_USER_REQUEST__INIT
cliente.c:61:35: note: each undeclared identifier is reported only once for each function it appears in
cliente.c:62:17: error: request for member ‘username’ in something not a structure or union
   62 |     new_user_req.username = username;
      |                 ^
cliente.c:66:20: warning: implicit declaration of function ‘new_user_request__pack’; did you mean ‘chat__new_user_request__pack’? [-Wimplicit-function-declaration]
   66 |     unsigned len = new_user_request__pack(&new_user_req, &buffer);
      |                    ^~~~~~~~~~~~~~~~~~~~~~
      |                    chat__new_user_request__pack
make: *** [Makefile:17: cliente.o] Error 1



gcc -Wall -I/usr/include/protobuf-c -c servidor.c
servidor.c: In function ‘list_connected_users’:
servidor.c:87:63: error: ‘buffer’ undeclared (first use in this function); did you mean ‘setbuffer’?
   87 |     unsigned len = chat__user_list_response__pack(&user_list, buffer);
      |                                                               ^~~~~~
      |                                                               setbuffer
servidor.c:87:63: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Makefile:14: servidor.o] Error 1


gcc -Wall -I/usr/include/protobuf-c -c cliente.c
cliente.c: In function ‘main’:
cliente.c:66:64: warning: passing argument 2 of ‘chat__new_user_request__pack’ from incompatible pointer type [-Wincompatible-pointer-types]
   66 |    unsigned len = chat__new_user_request__pack(&new_user_req, &buffer);
      |                                                               ^~~~~~~
      |                                                               |
      |                                                               uint8_t ** {aka unsigned char **}

In file included from cliente.c:7:
chat.pb-c.h:336:44: note: expected ‘uint8_t *’ {aka ‘unsigned char *’} but argument is of type ‘uint8_t **’ {aka ‘unsigned char **’}
  336 |                       uint8_t             *out);
      |                       ~~~~~~~~~~~~~~~~~~~~~^~~
gcc -o cliente cliente.o chat.pb-c.o -lprotobuf-c



gcc -Wall -I/usr/include/protobuf-c -c servidor.c
servidor.c: In function ‘list_connected_users’:
servidor.c:78:5: warning: implicit declaration of function ‘send_request’ [-Wimplicit-function-declaration]
   78 |     send_request(sock, &request);
      |     ^~~~~~~~~~~~
servidor.c:94:36: warning: implicit declaration of function ‘receive_response’ [-Wimplicit-function-declaration]
   94 |         Chat__Response *response = receive_response(sock);
      |                                    ^~~~~~~~~~~~~~~~
servidor.c:94:36: warning: initialization of ‘Chat__Response *’ {aka ‘struct _Chat__Response *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
gcc -o servidor servidor.o chat.pb-c.o -lprotobuf-c
/usr/bin/ld: servidor.o: in function `list_connected_users':
servidor.c:(.text+0x327): undefined reference to `send_request'
/usr/bin/ld: servidor.c:(.text+0x43c): undefined reference to `receive_response'
collect2: error: ld returned 1 exit status
make: *** [Makefile:8: servidor] Error 1


gcc -Wall -I/usr/include/protobuf-c -c servidor.c
gcc -o servidor servidor.o chat.pb-c.o -lprotobuf-c
gcc -Wall -I/usr/include/protobuf-c -c cliente.c
gcc -o cliente cliente.o chat.pb-c.o -lprotobuf-c
/usr/bin/ld: cannot open output file cliente: Text file busy
collect2: error: ld returned 1 exit status
make: *** [Makefile:11: cliente] Error 1
